--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,32 @@
+allure-behave==2.13.1
+allure-pytest==2.13.1
+allure-python-commons==2.13.1
+async-generator==1.10
+attrs==22.2.0
 behave==1.2.6
+certifi==2022.12.7
+cffi==1.15.1
+cryptography==39.0.2
+exceptiongroup==1.1.1
+h11==0.14.0
+idna==3.4
+iniconfig==2.0.0
+outcome==1.2.0
+packaging==23.0
+parse==1.19.0
+parse-type==0.6.0
+pluggy==1.0.0
+pycparser==2.21
+pyOpenSSL==23.0.0
+PySocks==1.7.1
+pytest==7.2.2
 selenium==4.1.3
-
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+tomli==2.0.1
+trio==0.22.0
+trio-websocket==0.10.2
+urllib3==1.26.15
+urllib3-secure-extra==0.1.0
+wsproto==1.2.0
